Backport fix for a common JuK crasher from Jiri Palecek to KDE 4.2.3.

BUG:179776

svn path=/branches/KDE/4.2/kdemultimedia/juk/; revision=960744